--- a/packages/ui/components/header/header.css
+++ b/packages/ui/components/header/header.css
@@ -1,6 +1,6 @@
 @import '@repo/foundations/styles';
 
-.storybook-header {
+.ds-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -9,12 +9,12 @@
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-.storybook-header svg {
+.ds-header svg {
   display: inline-block;
   vertical-align: top;
 }
 
-.storybook-header h1 {
+.ds-header h1 {
   display: inline-block;
   vertical-align: top;
   margin: 6px 0 6px 10px;
@@ -23,11 +23,11 @@
   line-height: 1;
 }
 
-.storybook-header button+button {
+.ds-header button+button {
   margin-left: 10px;
 }
 
-.storybook-header .welcome {
+.ds-header .welcome {
   margin-right: 10px;
   color: #333;
   font-size: 14px;
