--- a/packages/ui/components/button/button.css
+++ b/packages/ui/components/button/button.css
@@ -1,6 +1,6 @@
 @import '@repo/foundations/styles';
 
-.storybook-button {
+.ds-button {
   display: inline-block;
   cursor: pointer;
   border: 0;
@@ -9,28 +9,28 @@
   font-family: var(--brand-font-family-sans), 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-.storybook-button--primary {
+.ds-button--primary {
   background-color: var(--brand-interactive-primary-500);
   color: var(--semantic-static-color-foreground-default-strong);
 }
 
-.storybook-button--secondary {
+.ds-button--secondary {
   box-shadow: inset 0 0 0 var(--density-action-border-width-default) var(--semantic-static-color-border-default-strong);
   background-color: var(--semantic-static-color-background-default-default);
   color: var(--semantic-static-color-foreground-default-default);
 }
 
-.storybook-button--small {
+.ds-button--small {
   padding: var(--density-action-spacing-padding-sm) var(--density-action-spacing-padding-md);
   font-size: var(--brand-font-size-xs);
 }
 
-.storybook-button--medium {
+.ds-button--medium {
   padding: var(--density-action-spacing-padding-md) var(--density-action-spacing-padding-lg);
   font-size: var(--brand-font-size-sm);
 }
 
-.storybook-button--large {
+.ds-button--large {
   padding: var(--density-action-spacing-padding-lg) var(--density-action-spacing-padding-xl);
   font-size: var(--typography-button-label-size-lg);
 }
