--- a/packages/ui/components/button/button.css
+++ b/packages/ui/components/button/button.css
@@ -10,14 +10,21 @@
 }
 
 .ds-button--primary {
-  background-color: var(--brand-interactive-primary-500);
-  color: var(--semantic-static-color-foreground-default-strong);
+  background-color: var(--semantic-action-background-color-default);
+  color: var(--semantic-action-text-color-default);
+  border: 1px solid var(--semantic-action-border-color-default);
 }
 
 .ds-button--secondary {
-  box-shadow: inset 0 0 0 var(--density-action-border-width-default) var(--semantic-static-color-border-default-strong);
-  background-color: var(--semantic-static-color-background-default-default);
-  color: var(--semantic-static-color-foreground-default-default);
+  background-color: var(--semantic-action-background-color-secondary);
+  color: var(--semantic-action-text-color-secondary);
+  border: 1px solid var(--semantic-action-border-color-secondary);
+}
+
+.ds-button--error {
+  background-color: var(--semantic-action-background-color-error);
+  color: var(--semantic-action-text-color-error);
+  border: 1px solid var(--semantic-action-border-color-error);
 }
 
 .ds-button--small {
