fix: applies breakpoint tokens to button and tokens to header

--- a/packages/foundations/styles/index.css
+++ b/packages/foundations/styles/index.css
@@ -24,12 +24,12 @@
     --semantic-action-border-color-default: var(--brand-color-neutral-transparent);
     --semantic-action-border-color-error: var(--brand-color-error-700);
     --semantic-action-border-color-secondary: var(--brand-color-primary-500);
-    --semantic-static-color-foreground-default-strong: var(--brand-color-neutral-black);
-    --semantic-static-color-foreground-default-default: var(--brand-color-neutral-700);
-    --semantic-static-color-border-strong: var(--brand-color-error-700);
-    --semantic-static-color-border-default-strong: var(--brand-color-neutral-300);
-    --semantic-static-color-background-default-default: var(--brand-color-neutral-white);
-    --semantic-static-color-background-default-muted: var(--brand-color-neutral-100);
+    --semantic-static-text-color-strong: var(--brand-color-neutral-black);
+    --semantic-static-text-color-default: var(--brand-color-neutral-700);
+    --semantic-static-border-color-default: var(--brand-color-error-700);
+    --semantic-static-border-color-strong: var(--brand-color-neutral-300);
+    --semantic-static-background-color-default: var(--brand-color-neutral-white);
+    --semantic-static-background-color-muted: var(--brand-color-neutral-100);
   }
 
 }
@@ -41,19 +41,19 @@
   .dark {
     --color-modes: dark;
     --semantic-action-text-color-error: rgba(255, 77, 77, 1.00);
-    --semantic-action-text-color-secondary: var(--brand-color-primary-500);
+    --semantic-action-text-color-secondary: var(--brand-color-neutral-100);
     --semantic-action-text-color-default: var(--brand-color-neutral-white);
     --semantic-action-background-color-default: var(--brand-color-neutral-800);
     --semantic-action-background-color-secondary: var(--brand-color-neutral-800);
     --semantic-action-border-color-default: var(--brand-color-primary-500);
-    --semantic-action-border-color-error: rgba(255, 77, 77, 1.00);
+    --semantic-action-border-color-error: var(--brand-color-error-700);
     --semantic-action-border-color-secondary: var(--brand-color-primary-500);
-    --semantic-static-color-foreground-default-strong: var(--brand-color-neutral-white);
-    --semantic-static-color-foreground-default-default: var(--brand-color-neutral-300);
-    --semantic-static-color-border-strong: rgba(255, 77, 77, 1.00);
-    --semantic-static-color-border-default-strong: var(--brand-color-neutral-700);
-    --semantic-static-color-background-default-default: var(--brand-color-neutral-800);
-    --semantic-static-color-background-default-muted: var(--brand-color-neutral-900);
+    --semantic-static-text-color-strong: var(--brand-color-neutral-white);
+    --semantic-static-text-color-default: var(--brand-color-neutral-300);
+    --semantic-static-border-color-default: var(--brand-interactive-error-700);
+    --semantic-static-border-color-strong: var(--brand-color-neutral-700);
+    --semantic-static-background-color-default: var(--brand-color-neutral-800);
+    --semantic-static-background-color-muted: var(--brand-color-neutral-900);
   }
 
 }
@@ -105,20 +105,16 @@
       --brand-font-weight-regular: 400;
       --brand-font-weight-bold: 700;
       --brand-line-height-3: 12;
-      --brand-paragraph-spacing-3: 12;
-      --brand-paragraph-spacing-4: 16;
-      --brand-paragraph-spacing-5: 20;
-      --brand-paragraph-spacing-6: 24;
       --brand-line-height-4: 16;
       --brand-line-height-5: 20;
       --brand-line-height-6: 24;
-      --brand-tracking-tightest: -1;
-      --brand-tracking-tighter: -0.800000011920929;
-      --brand-tracking-tight: -0.4000000059604645;
-      --brand-tracking-regular: 0;
-      --brand-tracking-wide: 0.4000000059604645;
-      --brand-tracking-wider: 0.800000011920929;
-      --brand-tracking-widest: 1;
+      --brand-letter-spacing-tightest: -1;
+      --brand-letter-spacing-tighter: -0.800000011920929;
+      --brand-letter-spacing-tight: -0.4000000059604645;
+      --brand-letter-spacing-regular: 0;
+      --brand-letter-spacing-wide: 0.4000000059604645;
+      --brand-letter-spacing-wider: 0.800000011920929;
+      --brand-letter-spacing-widest: 1;
       --brand-color-error-700: rgba(216, 16, 16, 1.00);
       --brand-border-width-05: 0.5px;
       --brand-border-width-10: 1px;
@@ -127,6 +123,7 @@
       --brand-border-radius-xs: 2px;
       --brand-border-radius-sm: 4px;
       --brand-border-radius-md: 8px;
+      --brand-border-radius-lg: 16px;
       --brand-color-neutral-transparent: rgba(170, 170, 170, 0.00);
     }
   
@@ -138,24 +135,28 @@
   /* this layer requires a class to be added to a section or the body */
   .default {
     --density: default;
-    --density-action-spacing-padding-xs: var(--brand-spacing-20);
-    --density-action-spacing-padding-sm: var(--brand-spacing-40);
-    --density-action-spacing-padding-md: var(--brand-spacing-80);
-    --density-action-spacing-padding-lg: var(--brand-spacing-160);
-    --density-action-spacing-padding-xl: var(--brand-spacing-240);
-    --density-action-spacing-gap-xs: var(--brand-spacing-20);
-    --density-action-spacing-gap-sm: var(--brand-spacing-40);
-    --density-action-spacing-gap-md: var(--brand-spacing-80);
-    --density-action-spacing-gap-lg: var(--brand-spacing-160);
-    --density-action-spacing-gap-xl: var(--brand-spacing-240);
-    --density-action-spacing-icon-none: var(--brand-spacing-none);
-    --density-action-spacing-icon-sm: var(--brand-spacing-40);
-    --density-action-spacing-icon-md: var(--brand-spacing-80);
-    --density-action-spacing-icon-lg: var(--brand-spacing-160);
-    --density-action-spacing-icon-xl: var(--brand-spacing-240);
+    --density-action-gap-xs: var(--brand-spacing-20);
+    --density-action-gap-sm: var(--brand-spacing-40);
+    --density-action-gap-md: var(--brand-spacing-80);
+    --density-action-gap-lg: var(--brand-spacing-160);
+    --density-action-gap-xl: var(--brand-spacing-240);
+    --density-icon-size-none: var(--brand-spacing-none);
+    --density-padding-xs: var(--brand-spacing-20);
+    --density-padding-sm: var(--brand-spacing-40);
+    --density-padding-md: var(--brand-spacing-80);
+    --density-padding-lg: var(--brand-spacing-160);
+    --density-padding-xl: var(--brand-spacing-240);
+    --density-icon-size-sm: var(--brand-spacing-40);
+    --density-icon-size-md: var(--brand-spacing-80);
+    --density-icon-size-lg: var(--brand-spacing-160);
+    --density-icon-size-xl: var(--brand-spacing-240);
     --density-action-border-radius-none: var(--brand-border-radius-none);
     --density-action-border-radius-sm: var(--brand-border-radius-sm);
     --density-action-border-radius-default: var(--brand-border-radius-md);
+    --density-static-border-radius-none: var(--brand-border-radius-none);
+    --density-static-border-radius-sm: var(--brand-border-radius-sm);
+    --density-static-border-radius-md: var(--brand-border-radius-md);
+    --density-static-border-radius-lg: var(--brand-border-radius-lg);
     --density-action-border-width-thin: var(--brand-border-width-05);
     --density-action-border-width-default: var(--brand-border-width-10);
     --density-action-border-width-thick: var(--brand-border-width-20);
@@ -169,24 +170,28 @@
   /* this layer requires a class to be added to a section or the body */
   .compact {
     --density: compact;
-    --density-action-spacing-padding-xs: 0px;
-    --density-action-spacing-padding-sm: 0px;
-    --density-action-spacing-padding-md: 0px;
-    --density-action-spacing-padding-lg: 0px;
-    --density-action-spacing-padding-xl: 0px;
-    --density-action-spacing-gap-xs: 0px;
-    --density-action-spacing-gap-sm: 0px;
-    --density-action-spacing-gap-md: 0px;
-    --density-action-spacing-gap-lg: 0px;
-    --density-action-spacing-gap-xl: 0px;
-    --density-action-spacing-icon-none: 0px;
-    --density-action-spacing-icon-sm: 0px;
-    --density-action-spacing-icon-md: 0px;
-    --density-action-spacing-icon-lg: 0px;
-    --density-action-spacing-icon-xl: 0px;
+    --density-action-gap-xs: 0;
+    --density-action-gap-sm: 0;
+    --density-action-gap-md: 0;
+    --density-action-gap-lg: 0;
+    --density-action-gap-xl: 0;
+    --density-icon-size-none: 0px;
+    --density-padding-xs: 0px;
+    --density-padding-sm: 0px;
+    --density-padding-md: 0px;
+    --density-padding-lg: 0px;
+    --density-padding-xl: 0px;
+    --density-icon-size-sm: 0px;
+    --density-icon-size-md: 0px;
+    --density-icon-size-lg: 0px;
+    --density-icon-size-xl: 0px;
     --density-action-border-radius-none: 0px;
     --density-action-border-radius-sm: 0px;
     --density-action-border-radius-default: 0px;
+    --density-static-border-radius-none: 0px;
+    --density-static-border-radius-sm: 0px;
+    --density-static-border-radius-md: 0px;
+    --density-static-border-radius-lg: 0px;
     --density-action-border-width-thin: 0px;
     --density-action-border-width-default: 0px;
     --density-action-border-width-thick: 0px;
@@ -200,39 +205,41 @@
   /* this layer requires a class to be added to a section or the body */
   .mobile {
     --breakpoints: mobile;
-    --button: mobile;
-    --card: mobile;
-    --action-font-size-label: var(--brand-font-size-sm);
-    --action-font-weight-label: var(--brand-font-weight-bold);
-    --action-line-height-label: var(--brand-line-height-4);
-    --action-paragraph-spacing-label: var(--brand-paragraph-spacing-4);
-    --action-tracking-label: var(--brand-tracking-regular);
-    --static-font-size-header: var(--brand-font-size-regular);
-    --static-font-size-text: var(--brand-font-size-sm);
-    --static-font-weight-header: var(--brand-font-weight-bold);
-    --static-font-weight-text: var(--brand-font-weight-regular);
-    --static-line-height-header: var(--brand-line-height-4);
-    --static-line-height-text: var(--brand-line-height-4);
-    --static-paragraph-spacing-default: var(--brand-paragraph-spacing-4);
-    --static-tracking-default: var(--brand-tracking-regular);
-    --static-gap-xxs: var(--brand-spacing-40);
-    --static-gap-xs: var(--brand-spacing-60);
-    --static-gap-sm: var(--brand-spacing-80);
-    --static-gap-default: var(--brand-spacing-160);
-    --action-padding-none: var(--brand-spacing-none);
-    --action-padding-xxs: var(--brand-spacing-20);
-    --action-padding-xs: var(--brand-spacing-40);
-    --action-padding-sm: var(--brand-spacing-60);
-    --action-padding-default: var(--brand-spacing-80);
-    --action-gap-none: var(--brand-spacing-none);
-    --action-gap-xxs: var(--brand-spacing-20);
-    --action-gap-xs: var(--brand-spacing-40);
-    --action-gap-sm: var(--brand-spacing-60);
-    --action-gap-default: var(--brand-spacing-80);
-    --static-padding-xxs: var(--brand-spacing-40);
-    --static-padding-xs: var(--brand-spacing-60);
-    --static-padding-sm: var(--brand-spacing-80);
-    --static-padding-default: var(--brand-spacing-160);
+    --typography-label-font-size-default: var(--brand-font-size-sm);
+    --typography-label-font-weight-default: var(--brand-font-weight-bold);
+    --typography-label-line-height-default: var(--brand-line-height-4);
+    --typography-label-letter-spacing-default: var(--brand-letter-spacing-regular);
+    --typography-info-font-size-default: var(--brand-font-size-regular);
+    --typography-info-font-weight-default: var(--brand-font-weight-bold);
+    --typography-info-line-height-default: var(--brand-line-height-4);
+    --typography-info-letter-spacing-default: var(--brand-letter-spacing-regular);
+    --breakpoint-action-padding-none: var(--brand-spacing-none);
+    --breakpoint-action-padding-xxs: var(--density-padding-xs);
+    --breakpoint-action-padding-xs: var(--density-padding-sm);
+    --breakpoint-action-padding-sm: var(--density-padding-md);
+    --breakpoint-action-padding-default: var(--density-padding-lg);
+    --breakpoint-static-padding-default: var(--density-padding-lg);
+    --breakpoint-action-gap-none: var(--brand-spacing-none);
+    --breakpoint-action-gap-xxs: var(--brand-spacing-20);
+    --breakpoint-action-gap-xs: var(--brand-spacing-40);
+    --breakpoint-action-gap-sm: var(--brand-spacing-60);
+    --breakpoint-action-gap-default: var(--brand-spacing-80);
+    --breakpoint-action-border-radius-sm: var(--density-action-border-radius-sm);
+    --breakpoint-static-border-radius-sm: var(--density-static-border-radius-sm);
+    --breakpoint-static-border-radius-md: var(--density-static-border-radius-md);
+    --typography-body-font-size-1: var(--brand-font-size-regular);
+    --typography-body-font-size-2: var(--brand-font-size-sm);
+    --typography-body-font-weight-1: var(--brand-font-weight-bold);
+    --typography-body-font-weight-2: var(--brand-font-weight-regular);
+    --typography-body-line-height-1: var(--brand-line-height-4);
+    --typography-body-line-height-2: var(--brand-line-height-4);
+    --typography-body-letter-spacing-default: var(--brand-letter-spacing-regular);
+    --typography-title-font-size-lg: var(--brand-font-size-lg);
+    --typography-title-font-size-md: var(--brand-font-size-regular);
+    --typography-title-font-weight-default: var(--brand-font-weight-bold);
+    --typography-title-line-height-lg: var(--brand-line-height-5);
+    --typography-title-line-height-md: var(--brand-line-height-4);
+    --typography-title-letter-spacing-default: var(--brand-letter-spacing-regular);
   }
 
 }
@@ -243,39 +250,41 @@
   /* this layer requires a class to be added to a section or the body */
   .desktop {
     --breakpoints: desktop;
-    --button: desktop;
-    --card: desktop;
-    --action-font-size-label: var(--brand-font-size-regular);
-    --action-font-weight-label: var(--brand-font-weight-bold);
-    --action-line-height-label: var(--brand-line-height-4);
-    --action-paragraph-spacing-label: var(--brand-paragraph-spacing-4);
-    --action-tracking-label: var(--brand-tracking-regular);
-    --static-font-size-header: var(--brand-font-size-lg);
-    --static-font-size-text: var(--brand-font-size-regular);
-    --static-font-weight-header: var(--brand-font-weight-bold);
-    --static-font-weight-text: var(--brand-font-weight-regular);
-    --static-line-height-header: var(--brand-line-height-4);
-    --static-line-height-text: var(--brand-line-height-4);
-    --static-paragraph-spacing-default: var(--brand-paragraph-spacing-4);
-    --static-tracking-default: var(--brand-tracking-regular);
-    --static-gap-xxs: var(--brand-spacing-60);
-    --static-gap-xs: var(--brand-spacing-80);
-    --static-gap-sm: var(--brand-spacing-80);
-    --static-gap-default: var(--brand-spacing-160);
-    --action-padding-none: var(--brand-spacing-none);
-    --action-padding-xxs: var(--brand-spacing-20);
-    --action-padding-xs: var(--brand-spacing-60);
-    --action-padding-sm: var(--brand-spacing-80);
-    --action-padding-default: var(--brand-spacing-160);
-    --action-gap-none: var(--brand-spacing-none);
-    --action-gap-xxs: var(--brand-spacing-20);
-    --action-gap-xs: var(--brand-spacing-60);
-    --action-gap-sm: var(--brand-spacing-80);
-    --action-gap-default: var(--brand-spacing-160);
-    --static-padding-xxs: var(--brand-spacing-60);
-    --static-padding-xs: var(--brand-spacing-80);
-    --static-padding-sm: var(--brand-spacing-80);
-    --static-padding-default: var(--brand-spacing-160);
+    --typography-label-font-size-default: var(--brand-font-size-regular);
+    --typography-label-font-weight-default: var(--brand-font-weight-bold);
+    --typography-label-line-height-default: var(--brand-line-height-4);
+    --typography-label-letter-spacing-default: var(--brand-letter-spacing-regular);
+    --typography-info-font-size-default: var(--brand-font-size-lg);
+    --typography-info-font-weight-default: var(--brand-font-weight-bold);
+    --typography-info-line-height-default: var(--brand-line-height-4);
+    --typography-info-letter-spacing-default: var(--brand-letter-spacing-regular);
+    --breakpoint-action-padding-none: var(--brand-spacing-none);
+    --breakpoint-action-padding-xxs: var(--density-padding-sm);
+    --breakpoint-action-padding-xs: var(--density-padding-md);
+    --breakpoint-action-padding-sm: var(--density-padding-lg);
+    --breakpoint-action-padding-default: var(--density-padding-xl);
+    --breakpoint-static-padding-default: var(--density-padding-xl);
+    --breakpoint-action-gap-none: var(--brand-spacing-none);
+    --breakpoint-action-gap-xxs: var(--brand-spacing-20);
+    --breakpoint-action-gap-xs: var(--brand-spacing-60);
+    --breakpoint-action-gap-sm: var(--brand-spacing-80);
+    --breakpoint-action-gap-default: var(--brand-spacing-160);
+    --breakpoint-action-border-radius-sm: var(--density-action-border-radius-default);
+    --breakpoint-static-border-radius-sm: var(--brand-border-radius-md);
+    --breakpoint-static-border-radius-md: var(--density-static-border-radius-lg);
+    --typography-body-font-size-1: var(--brand-font-size-lg);
+    --typography-body-font-size-2: var(--brand-font-size-regular);
+    --typography-body-font-weight-1: var(--brand-font-weight-bold);
+    --typography-body-font-weight-2: var(--brand-font-weight-regular);
+    --typography-body-line-height-1: var(--brand-line-height-4);
+    --typography-body-line-height-2: var(--brand-line-height-4);
+    --typography-body-letter-spacing-default: var(--brand-letter-spacing-regular);
+    --typography-title-font-size-lg: var(--brand-font-size-xl);
+    --typography-title-font-size-md: var(--brand-font-size-lg);
+    --typography-title-font-weight-default: var(--brand-font-weight-bold);
+    --typography-title-line-height-lg: var(--brand-line-height-6);
+    --typography-title-line-height-md: var(--brand-line-height-5);
+    --typography-title-letter-spacing-default: var(--brand-letter-spacing-regular);
   }
 
 }
