--- a/packages/ui/components/header/header.css
+++ b/packages/ui/components/header/header.css
@@ -4,9 +4,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 15px 20px;
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  border-bottom: 1px solid var(--semantic-static-border-color-strong);
+  padding: var(--breakpoint-static-padding-default);
+  font-family: var(--brand-font-family-sans), 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  background-color: var(--semantic-static-background-color-default);
 }
 
 .ds-header svg {
@@ -17,18 +18,19 @@
 .ds-header h1 {
   display: inline-block;
   vertical-align: top;
-  margin: 6px 0 6px 10px;
-  font-weight: 700;
-  font-size: 20px;
+  margin: var(--brand-spacing-60) 0 var(--brand-spacing-60) var(--brand-spacing-80);
+  font-weight: var(--typography-title-font-weight-default);
+  font-size: var(--typography-title-font-size-lg);
+  color: var(--semantic-static-text-color-strong);
   line-height: 1;
 }
 
-.ds-header button+button {
-  margin-left: 10px;
+.ds-header button + button {
+  margin-left: var(--breakpoint-action-gap-xs);
 }
 
 .ds-header .welcome {
-  margin-right: 10px;
-  color: #333;
-  font-size: 14px;
+  margin-right: var(--breakpoint-action-gap-xs);
+  color: var(--semantic-static-text-color-strong);
+  font-size: var(--typography-body-font-size-2);
 }
