--- a/packages/foundations/styles/index.css
+++ b/packages/foundations/styles/index.css
@@ -1,4 +1,3 @@
-
 @layer color-modes--light,color-modes--dark,brand--brand-1,density--default,density--compact,breakpoints--mobile,breakpoints--desktop,defaultLayers;
 
 @layer defaultLayers {
@@ -8,43 +7,48 @@
   }
 }
 
-
-
 @layer color-modes--light {
-  
   /* light */
   /* this layer requires a class to be added to a section or the body */
   .light {
     --color-modes: light;
     --semantic-action-text-color-error: var(--brand-color-error-700);
     --semantic-action-text-color-secondary: var(--brand-color-primary-500);
-    --semantic-action-text-color-default: var(--brand-interactive-neutral-white);
+    --semantic-action-text-color-default: var(
+      --brand-interactive-neutral-white
+    );
     --semantic-action-background-color-default: var(--brand-color-primary-500);
-    --semantic-action-background-color-secondary: var(--brand-interactive-neutral-white);
-    --semantic-action-border-color-default: var(--brand-color-neutral-transparent);
+    --semantic-action-background-color-secondary: var(
+      --brand-interactive-neutral-white
+    );
+    --semantic-action-border-color-default: var(
+      --brand-color-neutral-transparent
+    );
     --semantic-action-border-color-error: var(--brand-color-error-700);
     --semantic-action-border-color-secondary: var(--brand-color-primary-500);
     --semantic-static-text-color-strong: var(--brand-color-neutral-black);
     --semantic-static-text-color-default: var(--brand-color-neutral-700);
     --semantic-static-border-color-default: var(--brand-color-error-700);
     --semantic-static-border-color-strong: var(--brand-color-neutral-300);
-    --semantic-static-background-color-default: var(--brand-color-neutral-white);
+    --semantic-static-background-color-default: var(
+      --brand-color-neutral-white
+    );
     --semantic-static-background-color-muted: var(--brand-color-neutral-100);
   }
-
 }
 
 @layer color-modes--dark {
-  
   /* dark */
   /* this layer requires a class to be added to a section or the body */
   .dark {
     --color-modes: dark;
-    --semantic-action-text-color-error: rgba(255, 77, 77, 1.00);
+    --semantic-action-text-color-error: rgba(255, 77, 77, 1);
     --semantic-action-text-color-secondary: var(--brand-color-neutral-100);
     --semantic-action-text-color-default: var(--brand-color-neutral-white);
     --semantic-action-background-color-default: var(--brand-color-neutral-800);
-    --semantic-action-background-color-secondary: var(--brand-color-neutral-800);
+    --semantic-action-background-color-secondary: var(
+      --brand-color-neutral-800
+    );
     --semantic-action-border-color-default: var(--brand-color-primary-500);
     --semantic-action-border-color-error: var(--brand-color-error-700);
     --semantic-action-border-color-secondary: var(--brand-color-primary-500);
@@ -55,82 +59,78 @@
     --semantic-static-background-color-default: var(--brand-color-neutral-800);
     --semantic-static-background-color-muted: var(--brand-color-neutral-900);
   }
-
 }
 
 @layer brand--brand-1 {
-  
-    :root {
-      --brand-color-neutral-white: rgba(255, 255, 255, 1.00);
-      --brand-interactive-neutral-white: rgba(255, 255, 255, 1.00);
-      --brand-interactive-neutral-100: rgba(241, 241, 241, 1.00);
-      --brand-interactive-neutral-300: rgba(214, 214, 214, 1.00);
-      --brand-interactive-neutral-700: rgba(87, 87, 87, 1.00);
-      --brand-interactive-neutral-800: rgba(40, 40, 40, 1.00);
-      --brand-interactive-neutral-black: rgba(0, 0, 0, 1.00);
-      --brand-interactive-primary-500: rgba(26, 34, 242, 1.00);
-      --brand-interactive-error-700: rgba(216, 16, 16, 1.00);
-      --brand-color-primary-500: rgba(26, 34, 242, 1.00);
-      --brand-color-neutral-100: rgba(241, 241, 241, 1.00);
-      --brand-color-neutral-300: rgba(214, 214, 214, 1.00);
-      --brand-color-neutral-700: rgba(87, 87, 87, 1.00);
-      --brand-color-neutral-800: rgba(55, 55, 55, 1.00);
-      --brand-color-neutral-900: rgba(40, 40, 40, 1.00);
-      --brand-color-neutral-black: rgba(0, 0, 0, 1.00);
-      --brand-spacing-none: 0px;
-      --brand-spacing-20: 2px;
-      --brand-size-20: 2px;
-      --brand-size-40: 4px;
-      --brand-size-60: 6px;
-      --brand-size-80: 8px;
-      --brand-size-160: 16px;
-      --brand-size-200: 20px;
-      --brand-size-240: 24px;
-      --brand-size-360: 36px;
-      --brand-spacing-40: 4px;
-      --brand-spacing-60: 6px;
-      --brand-spacing-80: 8px;
-      --brand-spacing-160: 16px;
-      --brand-spacing-200: 20px;
-      --brand-spacing-240: 24px;
-      --brand-spacing-360: 36px;
-      --brand-font-family-sans: "DM Sans";
-      --brand-font-size-xxs: 10;
-      --brand-font-size-xs: 12;
-      --brand-font-size-sm: 14;
-      --brand-font-size-regular: 16;
-      --brand-font-size-lg: 20;
-      --brand-font-size-xl: 24;
-      --brand-font-size-xxl: 36;
-      --brand-font-weight-regular: 400;
-      --brand-font-weight-bold: 700;
-      --brand-line-height-3: 12;
-      --brand-line-height-4: 16;
-      --brand-line-height-5: 20;
-      --brand-line-height-6: 24;
-      --brand-letter-spacing-tightest: -1;
-      --brand-letter-spacing-tighter: -0.800000011920929;
-      --brand-letter-spacing-tight: -0.4000000059604645;
-      --brand-letter-spacing-regular: 0;
-      --brand-letter-spacing-wide: 0.4000000059604645;
-      --brand-letter-spacing-wider: 0.800000011920929;
-      --brand-letter-spacing-widest: 1;
-      --brand-color-error-700: rgba(216, 16, 16, 1.00);
-      --brand-border-width-05: 0.5px;
-      --brand-border-width-10: 1px;
-      --brand-border-width-20: 2px;
-      --brand-border-radius-none: 0px;
-      --brand-border-radius-xs: 2px;
-      --brand-border-radius-sm: 4px;
-      --brand-border-radius-md: 8px;
-      --brand-border-radius-lg: 16px;
-      --brand-color-neutral-transparent: rgba(170, 170, 170, 0.00);
-    }
-  
+  :root {
+    --brand-color-neutral-white: rgba(255, 255, 255, 1);
+    --brand-interactive-neutral-white: rgba(255, 255, 255, 1);
+    --brand-interactive-neutral-100: rgba(241, 241, 241, 1);
+    --brand-interactive-neutral-300: rgba(214, 214, 214, 1);
+    --brand-interactive-neutral-700: rgba(87, 87, 87, 1);
+    --brand-interactive-neutral-800: rgba(40, 40, 40, 1);
+    --brand-interactive-neutral-black: rgba(0, 0, 0, 1);
+    --brand-interactive-primary-500: rgba(26, 34, 242, 1);
+    --brand-interactive-error-700: rgba(216, 16, 16, 1);
+    --brand-color-primary-500: rgba(26, 34, 242, 1);
+    --brand-color-neutral-100: rgba(241, 241, 241, 1);
+    --brand-color-neutral-300: rgba(214, 214, 214, 1);
+    --brand-color-neutral-700: rgba(87, 87, 87, 1);
+    --brand-color-neutral-800: rgba(55, 55, 55, 1);
+    --brand-color-neutral-900: rgba(40, 40, 40, 1);
+    --brand-color-neutral-black: rgba(0, 0, 0, 1);
+    --brand-spacing-none: 0px;
+    --brand-spacing-20: 2px;
+    --brand-size-20: 2px;
+    --brand-size-40: 4px;
+    --brand-size-60: 6px;
+    --brand-size-80: 8px;
+    --brand-size-160: 16px;
+    --brand-size-200: 20px;
+    --brand-size-240: 24px;
+    --brand-size-360: 36px;
+    --brand-spacing-40: 4px;
+    --brand-spacing-60: 6px;
+    --brand-spacing-80: 8px;
+    --brand-spacing-160: 16px;
+    --brand-spacing-200: 20px;
+    --brand-spacing-240: 24px;
+    --brand-spacing-360: 36px;
+    --brand-font-family-sans: "Montserrat";
+    --brand-font-size-xxs: 10;
+    --brand-font-size-xs: 12;
+    --brand-font-size-sm: 14;
+    --brand-font-size-regular: 16;
+    --brand-font-size-lg: 20;
+    --brand-font-size-xl: 24;
+    --brand-font-size-xxl: 36;
+    --brand-font-weight-regular: 400;
+    --brand-font-weight-bold: 700;
+    --brand-line-height-3: 12;
+    --brand-line-height-4: 16;
+    --brand-line-height-5: 20;
+    --brand-line-height-6: 24;
+    --brand-letter-spacing-tightest: -1;
+    --brand-letter-spacing-tighter: -0.800000011920929;
+    --brand-letter-spacing-tight: -0.4000000059604645;
+    --brand-letter-spacing-regular: 0;
+    --brand-letter-spacing-wide: 0.4000000059604645;
+    --brand-letter-spacing-wider: 0.800000011920929;
+    --brand-letter-spacing-widest: 1;
+    --brand-color-error-700: rgba(216, 16, 16, 1);
+    --brand-border-width-05: 0.5px;
+    --brand-border-width-10: 1px;
+    --brand-border-width-20: 2px;
+    --brand-border-radius-none: 0px;
+    --brand-border-radius-xs: 2px;
+    --brand-border-radius-sm: 4px;
+    --brand-border-radius-md: 8px;
+    --brand-border-radius-lg: 16px;
+    --brand-color-neutral-transparent: rgba(170, 170, 170, 0);
+  }
 }
 
 @layer density--default {
-  
   /* default */
   /* this layer requires a class to be added to a section or the body */
   .default {
@@ -161,11 +161,9 @@
     --density-action-border-width-default: var(--brand-border-width-10);
     --density-action-border-width-thick: var(--brand-border-width-20);
   }
-
 }
 
 @layer density--compact {
-  
   /* compact */
   /* this layer requires a class to be added to a section or the body */
   .compact {
@@ -196,11 +194,9 @@
     --density-action-border-width-default: 0px;
     --density-action-border-width-thick: 0px;
   }
-
 }
 
 @layer breakpoints--mobile {
-  
   /* mobile */
   /* this layer requires a class to be added to a section or the body */
   .mobile {
@@ -208,11 +204,15 @@
     --typography-label-font-size-default: var(--brand-font-size-sm);
     --typography-label-font-weight-default: var(--brand-font-weight-bold);
     --typography-label-line-height-default: var(--brand-line-height-4);
-    --typography-label-letter-spacing-default: var(--brand-letter-spacing-regular);
+    --typography-label-letter-spacing-default: var(
+      --brand-letter-spacing-regular
+    );
     --typography-info-font-size-default: var(--brand-font-size-regular);
     --typography-info-font-weight-default: var(--brand-font-weight-bold);
     --typography-info-line-height-default: var(--brand-line-height-4);
-    --typography-info-letter-spacing-default: var(--brand-letter-spacing-regular);
+    --typography-info-letter-spacing-default: var(
+      --brand-letter-spacing-regular
+    );
     --breakpoint-action-padding-none: var(--brand-spacing-none);
     --breakpoint-action-padding-xxs: var(--density-padding-xs);
     --breakpoint-action-padding-xs: var(--density-padding-sm);
@@ -224,28 +224,36 @@
     --breakpoint-action-gap-xs: var(--brand-spacing-40);
     --breakpoint-action-gap-sm: var(--brand-spacing-60);
     --breakpoint-action-gap-default: var(--brand-spacing-80);
-    --breakpoint-action-border-radius-sm: var(--density-action-border-radius-sm);
-    --breakpoint-static-border-radius-sm: var(--density-static-border-radius-sm);
-    --breakpoint-static-border-radius-md: var(--density-static-border-radius-md);
+    --breakpoint-action-border-radius-sm: var(
+      --density-action-border-radius-sm
+    );
+    --breakpoint-static-border-radius-sm: var(
+      --density-static-border-radius-sm
+    );
+    --breakpoint-static-border-radius-md: var(
+      --density-static-border-radius-md
+    );
     --typography-body-font-size-1: var(--brand-font-size-regular);
     --typography-body-font-size-2: var(--brand-font-size-sm);
     --typography-body-font-weight-1: var(--brand-font-weight-bold);
     --typography-body-font-weight-2: var(--brand-font-weight-regular);
     --typography-body-line-height-1: var(--brand-line-height-4);
     --typography-body-line-height-2: var(--brand-line-height-4);
-    --typography-body-letter-spacing-default: var(--brand-letter-spacing-regular);
+    --typography-body-letter-spacing-default: var(
+      --brand-letter-spacing-regular
+    );
     --typography-title-font-size-lg: var(--brand-font-size-lg);
     --typography-title-font-size-md: var(--brand-font-size-regular);
     --typography-title-font-weight-default: var(--brand-font-weight-bold);
     --typography-title-line-height-lg: var(--brand-line-height-5);
     --typography-title-line-height-md: var(--brand-line-height-4);
-    --typography-title-letter-spacing-default: var(--brand-letter-spacing-regular);
+    --typography-title-letter-spacing-default: var(
+      --brand-letter-spacing-regular
+    );
   }
-
 }
 
 @layer breakpoints--desktop {
-  
   /* desktop */
   /* this layer requires a class to be added to a section or the body */
   .desktop {
@@ -253,11 +261,15 @@
     --typography-label-font-size-default: var(--brand-font-size-regular);
     --typography-label-font-weight-default: var(--brand-font-weight-bold);
     --typography-label-line-height-default: var(--brand-line-height-4);
-    --typography-label-letter-spacing-default: var(--brand-letter-spacing-regular);
+    --typography-label-letter-spacing-default: var(
+      --brand-letter-spacing-regular
+    );
     --typography-info-font-size-default: var(--brand-font-size-lg);
     --typography-info-font-weight-default: var(--brand-font-weight-bold);
     --typography-info-line-height-default: var(--brand-line-height-4);
-    --typography-info-letter-spacing-default: var(--brand-letter-spacing-regular);
+    --typography-info-letter-spacing-default: var(
+      --brand-letter-spacing-regular
+    );
     --breakpoint-action-padding-none: var(--brand-spacing-none);
     --breakpoint-action-padding-xxs: var(--density-padding-sm);
     --breakpoint-action-padding-xs: var(--density-padding-md);
@@ -269,23 +281,29 @@
     --breakpoint-action-gap-xs: var(--brand-spacing-60);
     --breakpoint-action-gap-sm: var(--brand-spacing-80);
     --breakpoint-action-gap-default: var(--brand-spacing-160);
-    --breakpoint-action-border-radius-sm: var(--density-action-border-radius-default);
+    --breakpoint-action-border-radius-sm: var(
+      --density-action-border-radius-default
+    );
     --breakpoint-static-border-radius-sm: var(--brand-border-radius-md);
-    --breakpoint-static-border-radius-md: var(--density-static-border-radius-lg);
+    --breakpoint-static-border-radius-md: var(
+      --density-static-border-radius-lg
+    );
     --typography-body-font-size-1: var(--brand-font-size-lg);
     --typography-body-font-size-2: var(--brand-font-size-regular);
     --typography-body-font-weight-1: var(--brand-font-weight-bold);
     --typography-body-font-weight-2: var(--brand-font-weight-regular);
     --typography-body-line-height-1: var(--brand-line-height-4);
     --typography-body-line-height-2: var(--brand-line-height-4);
-    --typography-body-letter-spacing-default: var(--brand-letter-spacing-regular);
+    --typography-body-letter-spacing-default: var(
+      --brand-letter-spacing-regular
+    );
     --typography-title-font-size-lg: var(--brand-font-size-xl);
     --typography-title-font-size-md: var(--brand-font-size-lg);
     --typography-title-font-weight-default: var(--brand-font-weight-bold);
     --typography-title-line-height-lg: var(--brand-line-height-6);
     --typography-title-line-height-md: var(--brand-line-height-5);
-    --typography-title-letter-spacing-default: var(--brand-letter-spacing-regular);
+    --typography-title-letter-spacing-default: var(
+      --brand-letter-spacing-regular
+    );
   }
-
 }
-  
